--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mathieustan/vue-datepicker": "^0.2.11",
     "core-js": "^3.6.5",
+    "react-datepicker": "^4.6.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
